err/apistar-dramatiq.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/_pytest'...
Listing './lib/python3.5/site-packages/_pytest/_code'...
Listing './lib/python3.5/site-packages/_pytest/assertion'...
Listing './lib/python3.5/site-packages/apistar'...
Listing './lib/python3.5/site-packages/apistar/backends'...
Listing './lib/python3.5/site-packages/apistar/commands'...
Listing './lib/python3.5/site-packages/apistar/components'...
Listing './lib/python3.5/site-packages/apistar/frameworks'...
Listing './lib/python3.5/site-packages/apistar/layouts'...
Listing './lib/python3.5/site-packages/apistar/layouts/asyncio'...
Listing './lib/python3.5/site-packages/apistar/layouts/wsgi'...
Listing './lib/python3.5/site-packages/apistar/static'...
Listing './lib/python3.5/site-packages/apistar/static/css'...
Listing './lib/python3.5/site-packages/apistar/static/fonts'...
Listing './lib/python3.5/site-packages/apistar/static/img'...
Listing './lib/python3.5/site-packages/apistar/static/js'...
Listing './lib/python3.5/site-packages/apistar/templates'...
Listing './lib/python3.5/site-packages/apistar/templates/docs'...
Listing './lib/python3.5/site-packages/apistar/templates/docs/auth'...
Listing './lib/python3.5/site-packages/apistar/templates/docs/langs'...
Listing './lib/python3.5/site-packages/apistar/templates/docs/langs/intro'...
Listing './lib/python3.5/site-packages/apistar/templates/docs/layout'...
Listing './lib/python3.5/site-packages/apistar-0.3.9.egg-info'...
Listing './lib/python3.5/site-packages/apistar_dramatiq'...
Compiling './lib/python3.5/site-packages/apistar_dramatiq/injector.py'...
***   File "./lib/python3.5/site-packages/apistar_dramatiq/injector.py", line 28
    return (f"fnarg:{param.name}", self.get_arg)
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/apistar_dramatiq-0.1.1.dist-info'...
Listing './lib/python3.5/site-packages/argh'...
Listing './lib/python3.5/site-packages/argh-0.26.2.dist-info'...
Listing './lib/python3.5/site-packages/attr'...
Listing './lib/python3.5/site-packages/attrs-17.4.0.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/coreapi'...
Listing './lib/python3.5/site-packages/coreapi/codecs'...
Listing './lib/python3.5/site-packages/coreapi/transports'...
Listing './lib/python3.5/site-packages/coreapi-2.3.3.dist-info'...
Listing './lib/python3.5/site-packages/coreschema'...
Listing './lib/python3.5/site-packages/coreschema/encodings'...
Listing './lib/python3.5/site-packages/coreschema/templates'...
Listing './lib/python3.5/site-packages/coreschema/templates/bootstrap3'...
Listing './lib/python3.5/site-packages/coreschema/templates/bootstrap3/inputs'...
Listing './lib/python3.5/site-packages/coreschema-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/dramatiq'...
Listing './lib/python3.5/site-packages/dramatiq/brokers'...
Listing './lib/python3.5/site-packages/dramatiq/brokers/redis'...
Listing './lib/python3.5/site-packages/dramatiq/middleware'...
Listing './lib/python3.5/site-packages/dramatiq/rate_limits'...
Listing './lib/python3.5/site-packages/dramatiq/rate_limits/backends'...
Listing './lib/python3.5/site-packages/dramatiq/results'...
Listing './lib/python3.5/site-packages/dramatiq/results/backends'...
Listing './lib/python3.5/site-packages/dramatiq-0.18.0.dist-info'...
Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 7
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent/libev'...
Listing './lib/python3.5/site-packages/gevent-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/itypes-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pathtools'...
Listing './lib/python3.5/site-packages/pathtools-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pika'...
Listing './lib/python3.5/site-packages/pika/adapters'...
Listing './lib/python3.5/site-packages/pika-0.11.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pluggy'...
Listing './lib/python3.5/site-packages/pluggy-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/prometheus_client'...
Listing './lib/python3.5/site-packages/prometheus_client/bridge'...
Listing './lib/python3.5/site-packages/prometheus_client/twisted'...
Listing './lib/python3.5/site-packages/prometheus_client-0.0.20.egg-info'...
Listing './lib/python3.5/site-packages/py'...
Listing './lib/python3.5/site-packages/py/_code'...
Listing './lib/python3.5/site-packages/py/_io'...
Listing './lib/python3.5/site-packages/py/_log'...
Listing './lib/python3.5/site-packages/py/_path'...
Listing './lib/python3.5/site-packages/py/_process'...
Listing './lib/python3.5/site-packages/py/_vendored_packages'...
Listing './lib/python3.5/site-packages/py-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/pytest-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/uritemplate'...
Listing './lib/python3.5/site-packages/uritemplate-3.0.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/watchdog'...
Listing './lib/python3.5/site-packages/watchdog/observers'...
Listing './lib/python3.5/site-packages/watchdog/tricks'...
Listing './lib/python3.5/site-packages/watchdog/utils'...
Listing './lib/python3.5/site-packages/watchdog-0.8.3.egg-info'...
Listing './lib/python3.5/site-packages/watchdog_gevent'...
Listing './lib/python3.5/site-packages/watchdog_gevent-0.1.0.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/whitenoise'...
Listing './lib/python3.5/site-packages/whitenoise/runserver_nostatic'...
Listing './lib/python3.5/site-packages/whitenoise/runserver_nostatic/management'...
Listing './lib/python3.5/site-packages/whitenoise/runserver_nostatic/management/commands'...
Listing './lib/python3.5/site-packages/whitenoise-3.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
